--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.2.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
